fixed dark mode, fixed alignment, fixed weatherl alignment.

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -5,12 +5,12 @@
 /* colors:  Text- #401201, Footer- #401201/ #EBEBEB, 
         Background- #E3D1C4, Accents: #E1A8A8 */
 
-h1, h2, #join legend{
+h1, h2, #join legend, button{
     font-family: 'Baskerville', serif;
      color: #401201;
 }
 
-p, figcaption, label, #join input[type="submit"]{  color: #401201;
+p, figcaption, label, #join input[type="submit"], h4, #forecast-container,#current-temp{  color: #401201;
     font-family: 'Montserrat Alternates', sans-serif;
 }
 
@@ -145,7 +145,7 @@ header h1{
 }
 
 .action{display:flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     border: 2px solid #401201;
@@ -154,6 +154,26 @@ header h1{
     margin-left: 12%;
     margin-top: 5%;
     margin-bottom: 5%;
+    background-color: #E3D1C4;
+}
+
+.action p{
+    font-size: 30px;
+    font-weight: 400;
+}
+
+.action button{
+    width: 250px;
+    height: 45px;
+    border: 2px solid #401201;
+    border-radius: 20px;
+    background-color: #E1A8A8;
+    font-weight: 300;
+}
+
+.action a{
+    font-size: 25px;
+   
 }
 
 .spotlight{
@@ -175,19 +195,19 @@ header h1{
 }
 
 .spotlight p{justify-self: start;
-    
-    height: 200px;
-    width: 500px;
+    text-align: justify;
+    width: 600px;
     margin-top: 20px;
     padding: 20px;
     align-self: center;
     margin-left: -45px;
 }
 
-.weather{
+.weather{display: grid;
+    grid-template-columns: 300px 1fr;
+    column-gap: 20px;
     text-align: center;
-    border: 2px solid #401201;
-    width: 75%;
+    width: 70%;
     margin-left: 12%;
     margin-top: 5%;
     margin-bottom: 5%;
@@ -195,6 +215,67 @@ header h1{
     padding-bottom: 10px;
 }
 
+.weather p, #current-temp, .weather img, .weather figcaption{
+    grid-column: 1/1;
+    
+    
+}
+
+.weather p, h4{
+    align-self: end;
+    margin: 0;
+}
+
+.weather h4, #forecast-container{
+    grid-column: 2/2;
+}
+
+.weather h4, .weather p{
+    grid-row: 1/1;
+}
+
+
+.weather p{
+    font-weight: 700;
+}
+
+#current-temp, #weather-icon, figcaption{
+    grid-row: 2/3;
+}
+
+#current-temp, #weather-icon{
+    padding-bottom: 10px;
+}
+
+#temp-container{
+    grid-row: 2/3;
+    align-content: end;
+    padding-bottom: 20px;
+    border: 2px solid #401201;
+}
+
+#forecast-container{
+    grid-row: 2/3;
+    border: 2px solid #401201;
+}
+#forecast-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    column-gap: 50px;
+}
+
+#forecast-container img{
+   
+    padding: 10px;
+}
+
+#forecast-container div span{
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+}
 footer{
     display: flex;
     background-color: #401201;
@@ -239,6 +320,7 @@ footer a{
     display: block;
     width: 100%;
   } 
+
 
 
 
