--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -4,7 +4,7 @@
 
 .container-1{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 200px;
     width: 1800px;
     margin: 100px;
     column-gap: 20px;
@@ -77,6 +77,7 @@
 
 .membership{
     grid-column: 2/2;
+    justify-self: start;
 }
 
 .membership h1{
@@ -145,9 +146,7 @@ font-size: larger;
 line-height: 40px;
 }
 
-.membership{
-    justify-self: center;
-}
+
 
 .membership h2{
     text-align: center;
